# saf_assesment_bot

./: .gitignore  README.md  app.py  bot.py  pyproject.toml
data/: template.xlsx
